# rule_kit

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs
examples/dsl/: context_user.json  context_user.yaml
src/: builder.rs  engine.rs  error.rs  lib.rs  rule.rs  structs.rs  traits.rs  utils.rs
tests/: priority_test.rs
